# Aphelion-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  ShinobuEngine.sln
Aphelion/: CMakeLists.txt
Aphelion/res/shader/: Texture3D.glsl  Texture3DFlat.glsl
Aphelion/src/Aphelion/: Common.h
Aphelion/src/Aphelion/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.cpp  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PRNG.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Window.cpp  Window.h
Aphelion/src/Aphelion/Core/Event/: ApplicationEvent.h  Event.h  NetEvent.h
Aphelion/src/Aphelion/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Aphelion/src/Aphelion/Core/Input/: Input.h
Aphelion/src/Aphelion/ECS/: Component.cpp  Component.h  Entity.h  Registry.cpp  Registry.h  Scene.cpp  Scene.h
Aphelion/src/Aphelion/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  NetEvent.h
Aphelion/src/Aphelion/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Aphelion/src/Aphelion/Net/: Client.cpp  Client.h  ClientLayer.cpp  ClientLayer.h  Network protocol.md  Packet.cpp  Packet.h  Protocol.h  Server.cpp  Server.h  ServerLayer.cpp  ServerLayer.h
Aphelion/src/Aphelion/Physics/: CMakeLists.txt  PhysXUsage.md  PhysicsActor.h  PhysicsAggregate.cpp  PhysicsAggregate.h  PhysicsBounds.cpp  PhysicsBounds.h  PhysicsError.h  PhysicsFoundation.cpp  PhysicsFoundation.h  PhysicsGLM.h  PhysicsGeometry.cpp  PhysicsGeometry.h  PhysicsLayer.cpp  PhysicsLayer.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsQuery.cpp  PhysicsQuery.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsShape.cpp  PhysicsShape.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
Aphelion/src/Aphelion/Physics/Actor/: PhysicsActor.h  RigidDynamic.cpp  RigidDynamic.h  RigidStatic.cpp  RigidStatic.h
Aphelion/src/Aphelion/Physics/Actora/: RigidDynamic.cpp  RigidStatic.cpp  RigidStatic.h
Aphelion/src/Aphelion/Renderer/: CMakeLists.txt  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Primitive.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Aphelion/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Aphelion/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp
CMake/: PhysXBuild.cmake
Demo/Physics/: CMakeLists.txt  Entry.cpp  PhysicsDemoLayer.cpp  PhysicsDemoLayer.h  PhysicsRaycastLayer.h
Doxygen/: groups.dox
Engine/: Engine.vcxproj  Engine.vcxproj.filters  Main.cpp
Engine/Framework/: Engine.cpp  Engine.h
Engine/PropertySheets/: EngineDependencies.props  ProjectStructure.props
Sandbox/: CMakeLists.txt
Sandbox/2DPlatformer/: CMakeLists.txt
Sandbox/2DPlatformer/src/: Entry.cpp
Sandbox/PhysicsDemo/: CMakeLists.txt  Entry.cpp  PhysicsRaycastLayer.h
Sandbox/VoxelCraft/: CMakeLists.txt
Sandbox/VoxelCraft/res/shader/: Voxel.glsl
Sandbox/VoxelCraft/src/: Primitives.cpp
Sandbox/VoxelCraft/src/Block/: BlockLibrary.cpp  BlockType.cpp
Sandbox/VoxelCraft/src/Layer/: Client.cpp  SceneStats.h
Sandbox/VoxelCraft/src/System/: ChunkSystem.cpp  ChunkSystem.h
Sandbox/res/shader/: Voxel.glsl
Sandbox/src/: Application.cpp  Component.h  Entry.cpp  PacketBuffer.h  PacketQueue.h  Primitives.cpp  Primitives.h  Sandbox.cpp  Sandbox.h  System.h
Sandbox/src/Block/: BlockLibrary.h  BlockType.cpp  BlockType.h  ChunkDataStructure.cpp  ChunkDataStructure.h  ChunkProtocol.md
Sandbox/src/Component/: ChunkComponent.h  Component.h  ServerComponent.h
Sandbox/src/Layer/: Client.cpp  Client.h  MainMenu.h  SceneStats.h  Server.cpp  Server.h
Sandbox/src/System/: ChunkSystem.cpp  ChunkSystem.h  PlayerSystem.h  System.h
Shinobu/: CMakeLists.txt
Shinobu/res/shaders/: Texture2D.glsl  Texture3D.glsl
Shinobu/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Shinobu/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Shinobu/src/Shinobu/: Common.h  Shinobu.h
Shinobu/src/Shinobu/Core/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Time.cpp  Time.h  Timer.h  Timestep.h  Transform.cpp  Transform.h  Window.cpp  Window.h
Shinobu/src/Shinobu/Core/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Shinobu/src/Shinobu/ECS/: ECS.cpp  ECS.h  ECSLayer.h  Registry.cpp  Registry.h  Scene.cpp  Scene.h  Serialize.h
Shinobu/src/Shinobu/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  LayerEvent.h  MouseEvent.h  NetEvent.h
Shinobu/src/Shinobu/Events/: Event.h
Shinobu/src/Shinobu/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Shinobu/src/Shinobu/Net/: Client.cpp  Client.h  ClientLayer.cpp  ClientLayer.h  Packet.cpp  Packet.h  Protocol.h  Server.cpp  Server.h  ServerLayer.cpp  ServerLayer.h
Shinobu/src/Shinobu/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Shinobu/src/Shinobu/Renderer/: GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
extlibs/: versions.txt
property-sheets/: EngineDependencies.props  ProjectStructure.props
(+6 files in other folders)
